# MdtExecutableFile

./: .gitignore  .gitlab-ci.yml  BUILD.md  CMakeLists.txt  LICENSE.md  README.md  conanfile.py
apps/ElfLayoutViewer/src/: AbstractTableModel.cpp  AbstractTableModel.h  CMakeLists.txt  HeaderTableGraphicsItemMap.cpp  HeaderTableGraphicsItemMap.h  HeaderTableGraphicsItemMapId.cpp  HeaderTableGraphicsItemMapId.h  LayoutGraphicsItem.cpp  LayoutGraphicsItem.h  LayoutViewGraphicsScene.cpp  LayoutViewGraphicsScene.h  LayoutViewSegmentLayout.cpp  LayoutViewSegmentLayout.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Numeric.cpp  Numeric.h  ProgramHeaderTableModel.cpp  ProgramHeaderTableModel.h  SectionGraphicsItem.cpp  SectionGraphicsItem.h  SectionGraphicsItemData.cpp  SectionGraphicsItemData.h  SectionHeaderTableModel.cpp  SectionHeaderTableModel.h  SegmentGraphicsItem.cpp  SegmentGraphicsItem.h  SegmentGraphicsItemData.cpp  SegmentGraphicsItemData.h  SegmentTypeString.cpp  SegmentTypeString.h  main.cpp
libs/: CMakeLists.txt
libs/Catch2/: Catch2Main.cpp  Catch2QString.cpp  Catch2QString.h
libs/ExecutableFileElf/src/: CMakeLists.txt
libs/ExecutableFileElf/src/Mdt/ExecutableFile/: ElfFileIoEngine.cpp  ElfFileIoEngine.h  RPathElf.cpp  RPathElf.h
libs/ExecutableFileElf/src/Mdt/ExecutableFile/Elf/: Algorithm.cpp  Algorithm.h  Debug.cpp  Debug.h  DynamicSection.cpp  DynamicSection.h  DynamicSectionWriter.cpp  DynamicSectionWriter.h  Exceptions.cpp  Exceptions.h  FileAllHeaders.cpp  FileAllHeaders.h  FileAllHeadersReader.cpp  FileAllHeadersReader.h  FileAllHeadersReaderWriterCommon.cpp  FileAllHeadersReaderWriterCommon.h  FileAllHeadersWriter.cpp  FileAllHeadersWriter.h  FileHeader.cpp  FileHeader.h  FileHeaderReaderWriterCommon.cpp  FileHeaderReaderWriterCommon.h  FileHeaderWriter.cpp  FileHeaderWriter.h  FileIoEngine.cpp  FileIoEngine.h  FileOffsetChanges.cpp  (+79 more)
libs/ExecutableFileElf/tests/: CMakeLists.txt
libs/ExecutableFileElf/tests/src/: ElfAlgorithmTest.cpp  ElfDynamicSectionErrorTest.cpp  ElfDynamicSectionTest.cpp  ElfDynamicSectionTestCommon.h  ElfDynamicSectionWriterTest.cpp  ElfFileAllHeadersTest.cpp  ElfFileAllHeadersTestUtils.h  ElfFileAllHeadersTestUtilsTest.cpp  ElfFileHeaderWriterTest.cpp  ElfFileIoEngineErrorTest.cpp  ElfFileIoEngineTest.cpp  ElfFileIoEngineTest_Unix.cpp  ElfFileIoTestCommon.h  ElfFileIoTestUtils.h  ElfFileReaderTest.cpp  ElfFileWriterFileTest.cpp  ElfFileWriterTest_Unix.cpp  ElfFileWriterUnitTest.cpp  ElfGlobalOffsetTableReaderWriterTest.cpp  ElfGlobalOffsetTableTest.cpp  ElfGnuHashTableReaderWriterTest.cpp  ElfGnuHashTableTest.cpp  ElfHashTableReaderWriterTest.cpp  ElfHashTableTest.cpp  ElfNoteSectionReaderWriterErrorTest.cpp  ElfNoteSectionReaderWriterTest.cpp  ElfNoteSectionTableTest.cpp  ElfNoteSectionTest.cpp  ElfOffsetRangeTest.cpp  ElfProgramHeaderReaderErrorTest.cpp  ElfProgramHeaderReaderTest.cpp  ElfProgramHeaderReaderTestCommon.h  ElfProgramHeaderTableTest.cpp  ElfProgramHeaderTest.cpp  ElfProgramHeaderTestUtils.h  ElfProgramHeaderWriterTest.cpp  ElfProgramInterpreterSectionReaderWriterTest.cpp  ElfProgramInterpreterSectionTest.cpp  ElfSectionHeaderTableTest.cpp  ElfSectionHeaderTest.cpp  (+11 more)
libs/ExecutableFilePe/src/: CMakeLists.txt
libs/ExecutableFilePe/src/Mdt/ExecutableFile/: PeFileIoEngine.cpp  PeFileIoEngine.h
libs/ExecutableFilePe/tests/: CMakeLists.txt
libs/ExecutableFilePe/tests/src/: PeFileIoEngineErrorTest.cpp  PeFileIoEngineTest.cpp  PeFileIoEngineTest_Windows.cpp  PeFileReaderTest.cpp
libs/ExecutableFile_Common/src/: CMakeLists.txt
libs/ExecutableFile_Common/src/Mdt/ExecutableFile/: AbstractExecutableFileIoEngine.cpp  AbstractExecutableFileIoEngine.h  Algorithm.cpp  Algorithm.h  ByteArraySpan.cpp  ByteArraySpan.h  Compiler.h  ExecutableFileFormat.h  ExecutableFileIoEngineImplementationInterface.cpp  ExecutableFileIoEngineImplementationInterface.h  ExecutableFileOpenMode.h  ExecutableFileReadError.cpp  ExecutableFileReadError.h  ExecutableFileReaderUtils.cpp  ExecutableFileReaderUtils.h  ExecutableFileWriteError.cpp  ExecutableFileWriteError.h  FileMapper.cpp  FileMapper.h  FileOpenError.cpp  FileOpenError.h  NotNullTerminatedStringError.cpp  NotNullTerminatedStringError.h  OperatingSystem.h  Platform.cpp  Platform.h  ProcessorISA.h  QRuntimeError.cpp  QRuntimeError.h  RPath.cpp  RPath.h  RPathFormatError.cpp  RPathFormatError.h  StringTableError.cpp  StringTableError.h
libs/ExecutableFile_Common/tests/: CMakeLists.txt
libs/ExecutableFile_Common/tests/src/: AlgorithmTest.cpp  ByteArraySpanTest.cpp  ExecutableFileReaderUtilsErrorTest.cpp  ExecutableFileReaderUtilsTest.cpp  FileMapperTest.cpp  PlatformTest.cpp  RPathTest.cpp
libs/ExecutableFile_Core/src/: CMakeLists.txt
libs/ExecutableFile_Core/src/Mdt/ExecutableFile/: AbstractExecutableFileIoEngine.cpp  AbstractExecutableFileIoEngine.h  ElfFileIoEngine.h  ExecutableFileIoEngine.cpp  ExecutableFileIoEngine.h  ExecutableFileReader.cpp  ExecutableFileReader.h  ExecutableFileWriter.cpp  ExecutableFileWriter.h  PeFileIoEngine.cpp  PeFileIoEngine.h
libs/ExecutableFile_Core/tests/: CMakeLists.txt
libs/ExecutableFile_Core/tests/src/: ElfFileIoEngineErrorTest.cpp  ElfFileIoEngineTest_Unix.cpp  ExecutableFileIoEngineErrorTest.cpp  ExecutableFileIoEngineTest.cpp  ExecutableFileReaderErrorTest.cpp  ExecutableFileReaderTest.cpp  ExecutableFileReaderTest_Unix.cpp  ExecutableFileWriterErrorTest.cpp  ExecutableFileWriterTest.cpp
libs/TestBinaries/: CMakeLists.txt  README.md
libs/TestBinaries/local/: CMakeLists.txt
libs/TestBinaries/local/src/: TestExecutableDynamic.cpp  TestSharedLibrary.cpp  TestSharedLibrary.h  TestStaticLibrary.cpp  TestStaticLibrary.h
libs/TestBinaries/utils/: CMakeLists.txt  TestBinariesUtils.cpp  TestBinariesUtils.h
libs/TestLib/: CMakeLists.txt
libs/TestLib/src/: ByteArraySpanTestUtils.cpp  ByteArraySpanTestUtils.h  CMakeLists.txt  RPathTestUtils.cpp  RPathTestUtils.h  TestFileUtils.cpp  TestFileUtils.h  TestUtils.cpp  TestUtils.h
libs/TestLib/tests/: CMakeLists.txt
libs/TestLib/tests/src/: RPathTestUtilsTest.cpp  TestFileUtilsTest.cpp
(+74 files in other folders)
